ghc-6.2/hslibs/win32/Win32Bitmap_stub_ffi.h

extern void* prim_setBitmapDimensionEx(HBITMAP h,LONG gc_arg2,LONG gc_arg3);
extern LONG access_prim_setBitmapDimensionEx_gc_res1(HsPtr);
extern LONG access_prim_setBitmapDimensionEx_gc_res2(HsPtr);
extern int access_prim_setBitmapDimensionEx_gc_failed(HsPtr);
extern void* access_prim_setBitmapDimensionEx_gc_failstring(HsPtr);
extern void* prim_getBitmapInfo(HBITMAP x);
extern LONG access_prim_getBitmapInfo_gc_res1(HsPtr);
extern LONG access_prim_getBitmapInfo_gc_res2(HsPtr);
extern LONG access_prim_getBitmapInfo_gc_res3(HsPtr);
extern LONG access_prim_getBitmapInfo_gc_res4(HsPtr);
extern WORD access_prim_getBitmapInfo_gc_res5(HsPtr);
extern WORD access_prim_getBitmapInfo_gc_res6(HsPtr);
extern LPVOID access_prim_getBitmapInfo_gc_res7(HsPtr);
extern int access_prim_getBitmapInfo_gc_failed(HsPtr);
extern void* access_prim_getBitmapInfo_gc_failstring(HsPtr);
extern WORD prim_bI_RGB();
extern WORD prim_bI_RLE8();
extern WORD prim_bI_RLE4();
extern WORD prim_bI_BITFIELDS();
extern DWORD prim_dIB_PAL_COLORS();
extern DWORD prim_dIB_RGB_COLORS();
extern void* prim_getBITMAPINFOHEADER_(BITMAPINFOHEADER * arg1);
extern DWORD access_prim_getBITMAPINFOHEADER__gc_res1(HsPtr);
extern LONG access_prim_getBITMAPINFOHEADER__gc_res2(HsPtr);
extern LONG access_prim_getBITMAPINFOHEADER__gc_res3(HsPtr);
extern WORD access_prim_getBITMAPINFOHEADER__gc_res4(HsPtr);
extern WORD access_prim_getBITMAPINFOHEADER__gc_res5(HsPtr);
extern WORD access_prim_getBITMAPINFOHEADER__gc_res6(HsPtr);
extern DWORD access_prim_getBITMAPINFOHEADER__gc_res7(HsPtr);
extern LONG access_prim_getBITMAPINFOHEADER__gc_res8(HsPtr);
extern LONG access_prim_getBITMAPINFOHEADER__gc_res9(HsPtr);
extern DWORD access_prim_getBITMAPINFOHEADER__gc_res11(HsPtr);
extern DWORD access_prim_getBITMAPINFOHEADER__gc_res13(HsPtr);
extern void* prim_getBITMAPFILEHEADER(BITMAPFILEHEADER * arg1);
extern WORD access_prim_getBITMAPFILEHEADER_gc_res1(HsPtr);
extern DWORD access_prim_getBITMAPFILEHEADER_gc_res2(HsPtr);
extern WORD access_prim_getBITMAPFILEHEADER_gc_res3(HsPtr);
extern WORD access_prim_getBITMAPFILEHEADER_gc_res4(HsPtr);
extern DWORD access_prim_getBITMAPFILEHEADER_gc_res5(HsPtr);
extern unsigned int prim_sizeofBITMAP();
extern unsigned int prim_sizeofBITMAPINFO();
extern unsigned int prim_sizeofBITMAPINFOHEADER();
extern unsigned int prim_sizeofBITMAPFILEHEADER();
extern unsigned int prim_sizeofLPBITMAPFILEHEADER();
extern void prim_createBMPFile(char * arg1,HBITMAP arg2,HDC arg3);
extern DWORD prim_cBM_INIT();
extern void* prim_getDIBits(HDC arg1,HBITMAP arg2,INT arg3,INT arg4,LPVOID arg5,BITMAPINFO * arg6,DWORD arg7);
extern INT access_prim_getDIBits_res1(HsPtr);
extern int access_prim_getDIBits_gc_failed(HsPtr);
extern void* access_prim_getDIBits_gc_failstring(HsPtr);