ghc-6.2/hslibs/win32/Win32Bitmap.hs


setBitmapDimensionEx :: HBITMAP -> SIZE -> IO SIZE
setBitmapDimensionEx h gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3) ->
  prim_setBitmapDimensionEx h gc_arg2 gc_arg3
  >>= \ gc_result ->
  access_prim_setBitmapDimensionEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_setBitmapDimensionEx_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_setBitmapDimensionEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setBitmapDimensionEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))}
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_setBitmapDimensionEx" prim_setBitmapDimensionEx :: Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_setBitmapDimensionEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_setBitmapDimensionEx_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_setBitmapDimensionEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_setBitmapDimensionEx_gc_failstring :: Addr -> IO (Addr)

getBitmapInfo :: HBITMAP -> IO BITMAP
getBitmapInfo x =
  prim_getBitmapInfo x
  >>= \ gc_result ->
  access_prim_getBitmapInfo_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getBitmapInfo_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getBitmapInfo_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_getBitmapInfo_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_getBitmapInfo_gc_res5 (gc_result :: Addr) >>= \ gc_res5 ->
  access_prim_getBitmapInfo_gc_res6 (gc_result :: Addr) >>= \ gc_res6 ->
  access_prim_getBitmapInfo_gc_res7 (gc_result :: Addr) >>= \ gc_res7 ->
  access_prim_getBitmapInfo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getBitmapInfo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2,gc_res3,gc_res4,gc_res5,gc_res6,gc_res7)))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_getBitmapInfo" prim_getBitmapInfo :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_res3 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_res4 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_res5 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_res6 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_res7 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBitmapInfo_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
--
----------------------------------------------------------------

type BitmapCompression = WORD

foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_bI_RGB"  bI_RGB  :: BitmapCompression
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_bI_RLE8" bI_RLE8 :: BitmapCompression
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_bI_RLE4" bI_RLE4 :: BitmapCompression
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_bI_BITFIELDS" bI_BITFIELDS :: BitmapCompression

type ColorFormat = DWORD

foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_dIB_PAL_COLORS" dIB_PAL_COLORS :: ColorFormat
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_dIB_RGB_COLORS" dIB_RGB_COLORS :: ColorFormat

----------------------------------------------------------------
-- BITMAPINFO
----------------------------------------------------------------

type LPBITMAPINFO = Addr

----------------------------------------------------------------
-- BITMAPINFOHEADER
----------------------------------------------------------------

type BITMAPINFOHEADER =
 ( DWORD              -- biSize      -- sizeof(BITMAPINFOHEADER)
 , LONG               -- biWidth
 , LONG               -- biHeight
 , WORD               -- biPlanes
 , WORD               -- biBitCount  -- 1, 4, 8, 16, 24 or 32
 , BitmapCompression  -- biCompression
 , DWORD              -- biSizeImage
 , LONG               -- biXPelsPerMeter
 , LONG               -- biYPelsPerMeter
 , Maybe DWORD        -- biClrUsed
 , Maybe DWORD        -- biClrImportant
 )

type LPBITMAPINFOHEADER   = Addr

getBITMAPINFOHEADER_ :: LPBITMAPINFOHEADER -> IO BITMAPINFOHEADER
getBITMAPINFOHEADER_ arg1 =
  prim_getBITMAPINFOHEADER_ arg1
  >>= \ gc_result ->
  access_prim_getBITMAPINFOHEADER__gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getBITMAPINFOHEADER__gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getBITMAPINFOHEADER__gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_getBITMAPINFOHEADER__gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_getBITMAPINFOHEADER__gc_res5 (gc_result :: Addr) >>= \ gc_res5 ->
  access_prim_getBITMAPINFOHEADER__gc_res6 (gc_result :: Addr) >>= \ gc_res6 ->
  access_prim_getBITMAPINFOHEADER__gc_res7 (gc_result :: Addr) >>= \ gc_res7 ->
  access_prim_getBITMAPINFOHEADER__gc_res8 (gc_result :: Addr) >>= \ gc_res8 ->
  access_prim_getBITMAPINFOHEADER__gc_res9 (gc_result :: Addr) >>= \ gc_res9 ->
  access_prim_getBITMAPINFOHEADER__gc_res11 (gc_result :: Addr) >>= \ gc_res11 ->
  access_prim_getBITMAPINFOHEADER__gc_res13 (gc_result :: Addr) >>= \ gc_res13 ->
  (if 0 == (gc_res11)
   then return Nothing
   else (return ((Just gc_res11)))) >>= \ gc_res10 ->
  (if 0 == (gc_res13)
   then return Nothing
   else (return ((Just gc_res13)))) >>= \ gc_res12 ->
  (return ((gc_res1,gc_res2,gc_res3,gc_res4,gc_res5,gc_res6,gc_res7,gc_res8,gc_res9,gc_res10,gc_res12)))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_getBITMAPINFOHEADER_" prim_getBITMAPINFOHEADER_ :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res3 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res4 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res5 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res6 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res7 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res8 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res9 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res11 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPINFOHEADER__gc_res13 :: Addr -> IO (Word32)


----------------------------------------------------------------
-- BITMAPFILEHEADER
----------------------------------------------------------------

type BITMAPFILEHEADER =
 ( WORD   -- bfType      -- "BM" == 0x4d42
 , DWORD  -- bfSize      -- number of bytes in file
 , WORD   -- bfReserved1 -- == 0
 , WORD   -- bfReserved2 -- == 0
 , DWORD  -- bfOffBits   -- == (char*) bits - (char*) filehdr
 )

type LPBITMAPFILEHEADER = Addr

getBITMAPFILEHEADER :: LPBITMAPFILEHEADER -> IO BITMAPFILEHEADER
getBITMAPFILEHEADER arg1 =
  prim_getBITMAPFILEHEADER arg1
  >>= \ gc_result ->
  access_prim_getBITMAPFILEHEADER_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getBITMAPFILEHEADER_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getBITMAPFILEHEADER_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_getBITMAPFILEHEADER_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_getBITMAPFILEHEADER_gc_res5 (gc_result :: Addr) >>= \ gc_res5 ->
  (return ((gc_res1,gc_res2,gc_res3,gc_res4,gc_res5)))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_getBITMAPFILEHEADER" prim_getBITMAPFILEHEADER :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPFILEHEADER_gc_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPFILEHEADER_gc_res2 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPFILEHEADER_gc_res3 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPFILEHEADER_gc_res4 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getBITMAPFILEHEADER_gc_res5 :: Addr -> IO (Word32)

foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sizeofBITMAP" sizeofBITMAP :: Word32
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sizeofBITMAPINFO" sizeofBITMAPINFO :: Word32
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sizeofBITMAPINFOHEADER" sizeofBITMAPINFOHEADER :: Word32
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sizeofBITMAPFILEHEADER" sizeofBITMAPFILEHEADER :: Word32
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_sizeofLPBITMAPFILEHEADER" sizeofLPBITMAPFILEHEADER :: Word32

----------------------------------------------------------------
-- CreateBMPFile
----------------------------------------------------------------

-- A (large) helper function - courtesy of Microsoft

-- Includes "dumpBMP.c" for non-ghc backends.

createBMPFile :: String -> HBITMAP -> HDC -> IO ()
createBMPFile gc_arg1 arg2 arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  prim_createBMPFile arg1 arg2 arg3
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_createBMPFile" prim_createBMPFile :: Addr -> Addr -> Addr -> IO ()

----------------------------------------------------------------
-- Device Independent Bitmaps
----------------------------------------------------------------

foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_cBM_INIT" cBM_INIT :: DWORD

getDIBits :: HDC -> HBITMAP -> INT -> INT -> MbLPVOID -> LPBITMAPINFO -> ColorFormat -> IO INT
getDIBits arg1 arg2 arg3 arg4 arg5 arg6 arg7 =
  (case arg5 of {
      Nothing -> (return (nullAddr));
      (Just arg5) -> (return ((arg5)))
   }) >>= \ (arg5) ->
  prim_getDIBits arg1 arg2 arg3 arg4 arg5 arg6 arg7
  >>= \ gc_result ->
  access_prim_getDIBits_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getDIBits_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDIBits_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Bitmap_stub_ffi.h prim_getDIBits" prim_getDIBits :: Addr -> Addr -> Int32 -> Int32 -> Addr -> Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getDIBits_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getDIBits_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Bitmap_stub_ffi.h" access_prim_getDIBits_gc_failstring :: Addr -> IO (Addr)
